err/blee.icmplayer.err
Listing '.'...
Listing './bin'...
Compiling './bin/bleeIcmPlayer.py'...
***   File "./bin/bleeIcmPlayer.py", line 143
    print each
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blee'...
Listing './lib/python3.5/site-packages/blee/icmPlayer'...
Listing './lib/python3.5/site-packages/blee.icmPlayer-0.1.egg-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unisos'...
Listing './lib/python3.5/site-packages/unisos/icm'...
Compiling './lib/python3.5/site-packages/unisos/icm/icm.py'...
***   File "./lib/python3.5/site-packages/unisos/icm/icm.py", line 251
    print "This is default Cmnd Class Definition -- It is expected to be overwritten. You should never see this."
                                                                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unisos/ucf'...
Compiling './lib/python3.5/site-packages/unisos/ucf/ucf.py'...
***   File "./lib/python3.5/site-packages/unisos/ucf/ucf.py", line 106
    raise ValueError, 'Attribute %s already has a value and so cannot be written to' % attr
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/unisos.icm-0.12.egg-info'...
Listing './lib/python3.5/site-packages/unisos.ucf-0.12.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
